<resources>
    <string name="app_name">RentalMobil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_latihan_drawer">LatihanDrawerActivity</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="masukkan_gambar_ktp">Masukkan Gambar KTP</string>
    <string name="masukkan_nomor_telepon_anda">Masukkan nomor telepon anda</string>
    <string name="masukkan_password_anda">Masukkan password anda</string>
    <string name="masukkan_email_anda">Masukkan email anda</string>
    <string name="register">Register</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="silakan_kunjungi_alamat_kami_untuk_mengambil_mobil_anda_jln_goa_ria_samping_khatulistiwa_2_sudiang_iphink_rental_mobil">Silakan kunjungi alamat kami untuk mengambil mobil Anda! Jln. Goa Ria, Samping Khatulistiwa 2, Sudiang Iphink Rental Mobil</string>
    <string name="selamat_datang">Selamat datang</string>
    <string name="iphink_rental">Iphink Rental</string>
    <string name="full_tank">Full Tank</string>
    <string name="tv">TV</string>
    <string name="radio">Radio</string>
    <string name="_4_seat">4 Seat</string>
    <string name="_6_seat">6 Seat</string>
    <string name="transfer_atm">TRANSFER ATM</string>
    <string name="bayar_di_tempat">BAYAR DI TEMPAT</string>
    <string name="pete_pete_kuning">Pete-pete kuning</string>
    <string name="kuning">Kuning</string>
    <string name="rp_270_000_hari">Rp 270.000 / hari</string>
    <string name="total_biaya">Total biaya</string>
    <string name="biaya_pengemudi">Biaya Pengemudi</string>
    <string name="pilih_metode_pembayaran_anda">Pilih Metode Pembayaran Anda</string>

</resources>